stuck with filtering categorie

--- a/e-commerce/new.html
+++ b/e-commerce/new.html
@@ -12,21 +12,21 @@
 <body>
     <!-- Header Section -->
     <header class="nav">
-        <a href="#home" class="logo">elenganza</a>
-        <ul class="navbar">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./new.html">New</a></li>
-            <li><a href="#clothes">Clothings</a></li>
-            <li><a href="#bags">Bags</a></li>
-            <li><a href="#about">About Us</a></li>
-        </ul>
-        <div class="header-icon">
-            <a href="#">
-                <i class="fa-solid fa-bag-shopping"></i>
-            </a>
-            <i class="fa-solid fa-bars"></i>
-        </div>
-    </header>
+      <a href="#home" class="logo">elenganza</a>
+      <ul class="navbar">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./new.html">New</a></li>
+          <li><a href="./clothing.html">Clothings</a></li>
+          <li><a href="./bags.html">Bags</a></li>
+          <li><a href="./about.html">About Us</a></li>
+      </ul>
+      <div class="header-icon">
+          <a href="#">
+              <i class="fa-solid fa-bag-shopping"></i>
+          </a>
+          <i class="fa-solid fa-bars"></i>
+      </div>
+  </header>
     
     <!-- New clothes section -->
     <section class="new-clothes">
@@ -219,12 +219,13 @@
                     <span class="sale-tag">30% Sale</span>
                 </div> <!--end item 5-->
                 <div class="bag-item">
-                    <img src="./pics/bag6.webp" alt="">
-                    <div class="content-text">
-                      <h5>Back To School Blue Backpack</h5>
-                      <p>290£</p>
-                      <button class="btn"><a href="#">show more</a></button>
-                    </div>
+                  <img src="./pics/bag5.jpg" alt="">
+                  <div class="content-text">
+                    <h5>Baby Pink Mini Handbag</h5>
+                    <p>590£</p>
+                    <button class="btn"><a href="#">show more</a></button>
+                  </div>
+                  <span class="sale-tag">30% Sale</span>
                 </div> <!--end item 6-->
                 <div class="bag-item">
                     <img src="./pics/bag1.jpg" alt="">
@@ -235,45 +236,47 @@
                     </div>
                 </div> <!--end item 7-->
                 <div class="bag-item">
-                    <img src="./pics/bag2.jpg" alt="">
-                    <div class="content-text">
-                      <h5>Orange Mini Handbag</h5>
-                      <p>430£</p>
-                      <button class="btn"><a href="#">show more</a></button>
-                    </div>
+                  <img src="./pics/bag3.jpg" alt="">
+                  <div class="content-text">
+                    <h5>Marc Jacops Beige Tote Bag</h5>
+                    <p>840£</p>
+                    <button class="btn"><a href="#">show more</a></button>
+                  </div>
                 </div> <!--end item 8-->
                 <div class="bag-item">
-                    <img src="./pics/bag3.jpg" alt="">
-                    <div class="content-text">
-                      <h5>Marc Jacops Beige Tote Bag</h5>
-                      <p>840£</p>
+                  <img src="./pics/bag1.jpg" alt="">
+                  <div class="content-text">
+                      <h5>Large Shoulder Bag in Multi-colored woven nappa leather</h5>
+                      <p>670£</p>
                       <button class="btn"><a href="#">show more</a></button>
-                    </div>
+                  </div>
+                  <span class="sale-tag">30% Sale</span>
                 </div> <!--end item 9-->
                 <div class="bag-item">
-                    <img src="./pics/bag4.jpg" alt="">
-                    <div class="content-text">
-                      <h5>Mini Grass Green Shoulder Bag</h5>
-                      <p>340£</p>
+                  <img src="./pics/bag1.jpg" alt="">
+                  <div class="content-text">
+                      <h5>Large Shoulder Bag in Multi-colored woven nappa leather</h5>
+                      <p>670£</p>
                       <button class="btn"><a href="#">show more</a></button>
-                    </div>
+                  </div>
+                  <span class="sale-tag">30% Sale</span>
                 </div> <!--end item 10-->
                 <div class="bag-item">
-                    <img src="./pics/bag5.jpg" alt="">
-                    <div class="content-text">
-                      <h5>Baby Pink Mini Handbag</h5>
-                      <p>590£</p>
-                      <button class="btn"><a href="#">show more</a></button>
-                    </div>
-                    <span class="sale-tag">30% Sale</span>
+                  <img src="./pics/bag2.jpg" alt="">
+                  <div class="content-text">
+                    <h5>Orange Mini Handbag</h5>
+                    <p>430£</p>
+                    <button class="btn"><a href="#">show more</a></button>
+                  </div>
                 </div> <!--end item 11-->
                 <div class="bag-item">
-                    <img src="./pics/bag6.webp" alt="">
-                    <div class="content-text">
-                      <h5>Back To School Blue Backpack</h5>
-                      <p>290£</p>
-                      <button class="btn"><a href="#">show more</a></button>
-                    </div>
+                  <img src="./pics/bag5.jpg" alt="">
+                  <div class="content-text">
+                    <h5>Baby Pink Mini Handbag</h5>
+                    <p>590£</p>
+                    <button class="btn"><a href="#">show more</a></button>
+                  </div>
+                  <span class="sale-tag">30% Sale</span>
                 </div> <!--end item 12-->
             </div>
             <div class="pagination">
@@ -289,39 +292,39 @@
 
     <!-- Footer Section -->
     <footer>
-        <div class="section-title">
-          <h2>Elenganza</h2>
-        </div>
-        <div class="footer-content">
-          <div class="footer-item">
-            <h3>customer</h3>
-            <a href="./index.html">home</a>
-            <a href="./new.html">new</a>
-            <a href="./index.html#sales">sales</a>
-            <a href="./terms.html">terms & conditions</a>
-            <a href="./privacy.html">privacy policy</a>
-          </div> <!-- end item 1-->
-          <div class="footer-item">
-            <h3>categories</h3>
-            <a href="#sets">sets</a>
-            <a href="#sets">shirts</a>
-            <a href="#sets">dresses</a>
-            <a href="#sets">tops</a>
-            <a href="#sets">pants</a>
-            <a href="#sets">coats</a>
-            <a href="#sets">jackets</a>
-            <a href="#sets">bags</a>
-            <a href="#sets">backpacks</a>
-          </div> <!-- end item 2-->
-          <div class="footer-item">
-            <h3>About</h3>
-            <a href="#">about us</a>
-            <p>contact@elenganza.com</p>
-          </div> <!-- end item 3-->
-        </div>
-        <div class="terms">
-          <small>Copyright © 2023 Elenganza</small>
-        </div>
+      <div class="section-title">
+        <h2>Elenganza</h2>
+      </div>
+      <div class="footer-content">
+        <div class="footer-item">
+          <h3>customer</h3>
+          <a href="./index.html">home</a>
+          <a href="./new.html">new</a>
+          <a href="#sales">sales</a>
+          <a href="./terms.html">terms & conditions</a>
+          <a href="./privacy.html">privacy policy</a>
+        </div> <!-- end item 1-->
+        <div class="footer-item">
+          <h3>categories</h3>
+          <a href="./clothing.html">sets</a>
+          <a href="./clothing.html">shirts</a>
+          <a href="./clothing.html">dresses</a>
+          <a href="./clothing.html">tops</a>
+          <a href="./clothing.html">pants</a>
+          <a href="./clothing.html">coats</a>
+          <a href="./clothing.html">jackets</a>
+          <a href="./bags.html">bags</a>
+          <a href="./bags.html">backpacks</a>
+        </div> <!-- end item 2-->
+        <div class="footer-item">
+          <h3>About</h3>
+          <a href="./about.html">about us</a>
+          <p>contact@elenganza.com</p>
+        </div> <!-- end item 3-->
+      </div>
+      <div class="terms">
+        <small>Copyright © 2023 Elenganza</small>
+      </div>
     </footer>
   
     <script>
