--- a/e-commerce/privacy.html
+++ b/e-commerce/privacy.html
@@ -12,21 +12,22 @@
 <body>
     <!-- Header Section -->
     <header class="nav">
-        <a href="#home" class="logo">elenganza</a>
-        <ul class="navbar">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./new.html">New</a></li>
-            <li><a href="#clothes">Clothings</a></li>
-            <li><a href="#bags">Bags</a></li>
-            <li><a href="#about">About Us</a></li>
-        </ul>
-        <div class="header-icon">
-            <a href="#">
-                <i class="fa-solid fa-bag-shopping"></i>
-            </a>
-            <i class="fa-solid fa-bars"></i>
-        </div>
-    </header>
+      <a href="#home" class="logo">elenganza</a>
+      <ul class="navbar">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./new.html">New</a></li>
+          <li><a href="./clothing.html">Clothings</a></li>
+          <li><a href="./bags.html">Bags</a></li>
+          <li><a href="./about.html">About Us</a></li>
+      </ul>
+      <div class="header-icon">
+          <a href="#">
+              <i class="fa-solid fa-bag-shopping"></i>
+          </a>
+          <i class="fa-solid fa-bars"></i>
+      </div>
+  </header>
+
 
     <!-- Terms & conditions -->
     <section class="terms-page" id="terms-page">
@@ -70,25 +71,25 @@
             <h3>customer</h3>
             <a href="./index.html">home</a>
             <a href="./new.html">new</a>
-            <a href="./index.html#sales">sales</a>
+            <a href="#sales">sales</a>
             <a href="./terms.html">terms & conditions</a>
             <a href="./privacy.html">privacy policy</a>
           </div> <!-- end item 1-->
           <div class="footer-item">
             <h3>categories</h3>
-            <a href="#sets">sets</a>
-            <a href="#sets">shirts</a>
-            <a href="#sets">dresses</a>
-            <a href="#sets">tops</a>
-            <a href="#sets">pants</a>
-            <a href="#sets">coats</a>
-            <a href="#sets">jackets</a>
-            <a href="#sets">bags</a>
-            <a href="#sets">backpacks</a>
+            <a href="./clothing.html">sets</a>
+            <a href="./clothing.html">shirts</a>
+            <a href="./clothing.html">dresses</a>
+            <a href="./clothing.html">tops</a>
+            <a href="./clothing.html">pants</a>
+            <a href="./clothing.html">coats</a>
+            <a href="./clothing.html">jackets</a>
+            <a href="./bags.html">bags</a>
+            <a href="./bags.html">backpacks</a>
           </div> <!-- end item 2-->
           <div class="footer-item">
             <h3>About</h3>
-            <a href="#">about us</a>
+            <a href="./about.html">about us</a>
             <p>contact@elenganza.com</p>
           </div> <!-- end item 3-->
         </div>
