--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -36,7 +36,7 @@
         <section class="home" id="home">
             <div class="home-text">
                 <h1>New <br><span>Arrivals</span></h1>
-                <button class="btn"><a href="new">shop here <span>!!!</span></a></button>
+                <button class="btn"><a href="./new.html">shop here <span>!!!</span></a></button>
             </div>
         </section>
         
