made clothing & bags pages responsive

--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -178,7 +178,7 @@
             <p>We offer a large and inclusive inventory for you to choose from.</p>
           </div>
           <div class="categories-container">
-            <div class="category">
+            <div class="category" onclick="window.location.href='./clothing.html#sets'">
               <img src="./pics/category1.webp" alt="">
               <div>
                 <h2>Sets</h2>
@@ -188,7 +188,7 @@
               </div>
             </div> <!-- end item 1 -->
 
-            <div class="category">
+            <div class="category" onclick="window.location.href='./clothing.html#shirts'">
               <img src="./pics/category2.jpg" alt="">
               <div>
                 <h2>Shirts</h2>
@@ -198,7 +198,7 @@
               </div>
             </div> <!-- end item 2 -->
 
-            <div class="category">
+            <div class="category" onclick="window.location.href='./clothing.html#dresses'">
               <img src="./pics/category3.webp" alt="">
               <div>
                 <h2>dresses</h2>
@@ -208,7 +208,7 @@
               </div>
             </div> <!-- end item 3 -->
 
-            <div class="category">
+            <div class="category" onclick="window.location.href='./clothing.html#tops'">
               <img src="./pics/category4.jpg" alt="">
               <div>
                 <h2>tops</h2>
@@ -218,7 +218,7 @@
               </div>
             </div> <!-- end item 4 -->
 
-            <div class="category">
+            <div class="category" onclick="window.location.href='./clothing.html#pants'">
               <img src="./pics/category5.webp" alt="">
               <div>
                 <h2>pants</h2>
@@ -228,7 +228,7 @@
               </div>
             </div> <!-- end item 5 -->
 
-            <div class="category">
+            <div class="category" onclick="window.location.href='./clothing.html#coats'">
               <img src="./pics/category6.jpg" alt="">
               <div>
                 <h2>coats</h2>
@@ -238,7 +238,7 @@
               </div>
             </div> <!-- end item 6 -->
 
-            <div class="category">
+            <div class="category" onclick="window.location.href='./clothing.html#jackets'">
               <img src="./pics/category7.jpg" alt="">
               <div>
                 <h2>jackets</h2>
@@ -248,7 +248,7 @@
               </div>
             </div> <!-- end item 7 -->
 
-            <div class="category">
+            <div class="category" onclick="window.location.href='./bags.html#bags'">
               <img src="./pics/category8.jpg" alt="">
               <div>
                 <h2>bags</h2>
@@ -258,7 +258,7 @@
               </div>
             </div> <!-- end item 8 -->
 
-            <div class="category">
+            <div class="category" onclick="window.location.href='./bags.html#backpacks'">
               <img src="./pics/category9.jpg" alt="">
               <div>
                 <h2>Backpacks</h2>
