--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <a href="#home" class="logo">elenganza</a>
+        <a href="./index.html" class="logo">elenganza</a>
         <ul class="navbar">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./new.html">New</a></li>
@@ -26,8 +26,9 @@
             <a href="#">
                 <i class="fa-solid fa-bag-shopping"></i>
             </a>
-            <i class="fa-solid fa-bars"></i>
         </div>
+        <button id="open__nav-btn"><i class="fa-solid fa-bars"></i></button>
+        <button id="close__nav-btn"><i class="fa-solid fa-xmark"></i></button>
     </header>
     
     <!-- Main Content Section -->
@@ -358,6 +359,25 @@
     </footer>
 
     <script>
+      // ==================== NAVBAR ====================
+      const navItems = document.querySelector('.navbar');
+      const openNavBtn = document.querySelector('#open__nav-btn');
+      const closeNavBtn = document.querySelector('#close__nav-btn');
+      // open nav dropdown
+      const openNav = () => {
+          navItems.style.display = 'flex';
+          openNavBtn.style.display = 'none';
+          closeNavBtn.style.display = 'inline-block';
+      }
+      // close nav dropdown
+      const closeNav = () => {
+          navItems.style.display = 'none';
+          openNavBtn.style.display = 'inline-block';
+          closeNavBtn.style.display = 'none';
+      }
+      openNavBtn.addEventListener('click', openNav); //call the openNav function
+      closeNavBtn.addEventListener('click', closeNav); //call the closeNav function
+
       // ==================== HOME SLIDESHOW ====================
       const homeSection = document.querySelector('.home');
       const images = [
