--- a/e-commerce/new.html
+++ b/e-commerce/new.html
@@ -10,22 +10,23 @@
     <!-- Fonts -->
 </head>
 <body>
-    <!-- Header Section -->
-    <header class="nav">
-      <a href="#home" class="logo">elenganza</a>
-      <ul class="navbar">
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./new.html">New</a></li>
-          <li><a href="./clothing.html">Clothings</a></li>
-          <li><a href="./bags.html">Bags</a></li>
-          <li><a href="./about.html">About Us</a></li>
-      </ul>
-      <div class="header-icon">
-          <a href="#">
-              <i class="fa-solid fa-bag-shopping"></i>
-          </a>
-          <i class="fa-solid fa-bars"></i>
-      </div>
+  <!-- Header Section -->
+  <header class="navbar-white">
+    <a href="./index.html" class="logo">elenganza</a>
+    <ul class="navbar">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./new.html">New</a></li>
+        <li><a href="./clothing.html">Clothings</a></li>
+        <li><a href="./bags.html">Bags</a></li>
+        <li><a href="./about.html">About Us</a></li>
+    </ul>
+    <div class="header-icon">
+        <a href="#">
+            <i class="fa-solid fa-bag-shopping"></i>
+        </a>
+    </div>
+    <button id="open__nav-btn"><i class="fa-solid fa-bars"></i></button>
+    <button id="close__nav-btn"><i class="fa-solid fa-xmark"></i></button>
   </header>
     
     <!-- New clothes section -->
@@ -328,6 +329,25 @@
     </footer>
   
     <script>
+    // ==================== NAVBAR ====================
+    const navItems = document.querySelector('.navbar');
+    const openNavBtn = document.querySelector('#open__nav-btn');
+    const closeNavBtn = document.querySelector('#close__nav-btn');
+    // open nav dropdown
+    const openNav = () => {
+        navItems.style.display = 'flex';
+        openNavBtn.style.display = 'none';
+        closeNavBtn.style.display = 'inline-block';
+    }
+    // close nav dropdown
+    const closeNav = () => {
+        navItems.style.display = 'none';
+        openNavBtn.style.display = 'inline-block';
+        closeNavBtn.style.display = 'none';
+    }
+    openNavBtn.addEventListener('click', openNav); //call the openNav function
+    closeNavBtn.addEventListener('click', closeNav); //call the closeNav function
+
         //========================= new clothes counter ==================
         const clothesDiv = document.getElementById('clothes-container');
         const sectionClothes = clothesDiv.getElementsByClassName('clothes-item');
