finished html/css/js parts of app

--- a/e-commerce/terms.html
+++ b/e-commerce/terms.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New in - Elenganza</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./pics/favicon-32x32.png">
+    <title>Terms & Conditions - Elenganza</title>
     <link rel="stylesheet" href="styles.css">
 
     <!-- Iconscout cdn-->
