--- a/e-commerce/about.html
+++ b/e-commerce/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elenganza</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./pics/favicon-32x32.png">
+    <title>About Us - Elenganza</title>
     <link rel="stylesheet" href="styles.css">
 
     <!-- Iconscout cdn-->
