--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./pics/favicon-32x32.png">
     <title>Elenganza</title>
     <link rel="stylesheet" href="styles.css">
 
