--- a/business-consulting/index.html
+++ b/business-consulting/index.html
@@ -3,18 +3,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Consulting</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <!-- Nav -->
-    <header>
-        <div class="logo"></div>
-        <ul class="navbar">
+    <header class="nav container">
+        <div class="logo">
+            <h2>ProBiz</h2>
+        </div>
+        <ul class="nav-items">
             <li><a href="#">home</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Service</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-        <a href="#" class="contact-us"></a>
+        <a href="#" class="btn">subscribe</a>
     </header>
 
     <!-- Main -->
