--- a/business-consulting/index.html
+++ b/business-consulting/index.html
@@ -9,7 +9,7 @@
     <!-- Nav -->
     <header class="nav container">
         <div class="logo">
-            <h2>ProBiz</h2>
+            <h2>Pro<span>Biz</span></h2>
         </div>
         <ul class="nav-items">
             <li><a href="#">home</a></li>
