finished home page

--- a/business-consulting/index.html
+++ b/business-consulting/index.html
@@ -7,24 +7,42 @@
 </head>
 <body>
     <!-- Nav -->
-    <header class="nav container">
+    <header class="nav">
         <div class="logo">
             <h2>Pro<span>Biz</span></h2>
         </div>
         <ul class="nav-items">
-            <li><a href="#">home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home">home</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#service">Service</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
-        <a href="#" class="btn">subscribe</a>
+        <div class="btn"><a href="#">subscribe</a></div>
     </header>
 
     <!-- Main -->
     <main>
         <!-- Home Section -->
+        <section class="home container">
+            <div class="home-txt">
+                <h1>Build your <span>business</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consequatur nihil ut temporibus amet officiis quo dolor nisi deleniti? Veniam exercitationem adipisci temporibus tempora quisquam.</p>
+                <div class="btn btn-page"><a href="#">Get Started</a></div>
+            </div>
+            <div class="home-img">
+                <img src="./home.svg" alt="">
+            </div>
+        </section>
 
-        <!---->
+        <!-- About Section -->
+        <section class="about container"></section>
+
+        <!-- Service Section -->
+        <section class="service container"></section>
+
+        <!-- contact Section -->
+        <section class="contact container"></section>
+
     </main>
     
 </body>
