--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -27,11 +27,13 @@
             <a href="#">
                 <i class="fa-solid fa-bag-shopping"></i>
             </a>
+            <a href="./controllers/login.php">
+                <i class="fa-solid fa-user"></i>
+            </a>
         </div>
         <button id="open__nav-btn"><i class="fa-solid fa-bars"></i></button>
         <button id="close__nav-btn"><i class="fa-solid fa-xmark"></i></button>
     </header>
-    
     <!-- Main Content Section -->
     <main>
         <!-- Home section -->
@@ -441,5 +443,9 @@
       }
 
     </script>
+
+
+
+
 </body>
 </html>
