--- a/business-consulting/index.html
+++ b/business-consulting/index.html
@@ -4,6 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Consulting</title>
     <link rel="stylesheet" href="./styles.css">
+
+    <!-- Iconscout cdn-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Nav -->
@@ -26,7 +29,9 @@
         <section class="home container">
             <div class="home-txt">
                 <h1>Build your <span>business</span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consequatur nihil ut temporibus amet officiis quo dolor nisi deleniti? Veniam exercitationem adipisci temporibus tempora quisquam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consequatur nihil
+                    ut temporibus amet officiis quo dolor nisi deleniti? Veniam exercitationem 
+                    adipisci temporibus tempora quisquam.</p>
                 <div class="btn btn-page"><a href="#">Get Started</a></div>
             </div>
             <div class="home-img">
@@ -35,7 +40,25 @@
         </section>
 
         <!-- About Section -->
-        <section class="about container"></section>
+        <section class="about container">
+            <div class="about-cards">
+                <div class="about-card">
+                    <i class="fa-solid fa-calendar-days"></i>
+                    <h3>15 years</h3>
+                    <small>Project management</small>
+                </div>
+                <div class="about-card">
+                    <i class="fa-sharp fa-solid fa-list-check"></i>
+                    <h3>200+ projects</h3>
+                    <small>strategy planning</small>
+                </div>
+                <div class="about-card">
+                    <i class="fa-solid fa-person"></i>
+                    <h3>150+ clients</h3>
+                    <small>Network analysis</small>
+                </div>
+            </div>
+        </section>
 
         <!-- Service Section -->
         <section class="service container"></section>
