--- a/myblog/index.html
+++ b/myblog/index.html
@@ -20,6 +20,11 @@
         </ul>
     </header>
 
+    <section class="home-content container">
+        <h1>Hello, my name is Amina.</h1>
+        <p>And I am currently a freelance writer and website designer.</p>
+    </section>
+
 
     <footer class="container" id="connect">
         <h2>Connect</h2>
