--- a/myblog/index.html
+++ b/myblog/index.html
@@ -10,7 +10,8 @@
     <!--The Header Section-->
     <header>
         <div class="logo">
-            <h1>Amina</h1>
+            <span></span>
+            <a href="./index.html">Amina</a>
         </div>
         <ul class="nav">
             <li><a href="./index.html" class="active">Home</a></li>
@@ -22,7 +23,12 @@
 
     <section class="home-content container">
         <h1>Hello, my name is Amina.</h1>
-        <p>And I am currently a freelance writer and website designer.</p>
+        <p>And I am currently a freelance writer and designer.</p>
+        <p>Find me on: 
+            <span class="circle"></span> <a href="#">Fiverr</a> 
+            <span class="circle"></span> <a href="#">Medium</a> 
+            <span class="circle"></span> <a href="#">Upwork</a>
+        </p>
     </section>
 
 
