--- a/myblog/work.html
+++ b/myblog/work.html
@@ -10,7 +10,8 @@
     <!--The Header Section-->
     <header>
         <div class="logo">
-            <h1>amina</h1>
+            <span></span>
+            <a href="./index.html">Amina</a>
         </div>
         <ul class="nav">
             <li><a href="./index.html">Home</a></li>
