--- a/myblog/blogs.html
+++ b/myblog/blogs.html
@@ -21,6 +21,30 @@
         </ul>
     </header>
 
+    <section class="blogs-content container">
+        <div class="content-intro">
+            <h1>Blogs</h1>
+            <p>Essays, reviews, and other things that come to my mind.</p>
+        </div>
+        <span class="seperator"></span>
+        <div class="blogs">
+            <div class="blog-item">
+                <div class="blog-date"><p>09/07/2023</p></div>
+                <div class="blog-title"><p>Hello</p></div>
+                <div class="blog-desc"><p>This is the first blog that I've written here ...</p></div>
+            </div>
+            <div class="blog-item">
+                <div class="blog-date"><p>09/07/2023</p></div>
+                <div class="blog-title"><p>Hello</p></div>
+                <div class="blog-desc"><p>this is the first blog that I've written here ...</p></div>
+            </div>
+            <div class="blog-item">
+                <div class="blog-date"><p>09/07/2023</p></div>
+                <div class="blog-title"><p>Hello</p></div>
+                <div class="blog-desc"><p>this is the first blog that I've written here ...</p></div>
+            </div>
+        </div>
+    </section>
 
     <footer class="container" id="connect2">
         <h2>Connect</h2>
