--- a/myblog/index.html
+++ b/myblog/index.html
@@ -22,8 +22,10 @@
     </header>
 
     <section class="home-content container">
-        <h1>Hello, my name is Amina.</h1>
-        <p>And I am currently a freelance writer and designer.</p>
+        <div class="content-intro">
+            <h1>Hello, my name is Amina.</h1>
+            <p>And I am currently a freelance writer and designer.</p>
+        </div>
         <p>Find me on: 
             <span class="circle"></span> <a href="#">Fiverr</a> 
             <span class="circle"></span> <a href="#">Medium</a> 
