--- a/myblog/work.html
+++ b/myblog/work.html
@@ -21,6 +21,34 @@
         </ul>
     </header>
 
+    <section class="work-content container">
+        <div class="content-intro">
+            <h1>Works</h1>
+            <p>Some of the things that I've done.</p>
+        </div>
+        <span class="seperator"></span>
+        <div class="works">
+            <div class="work-item">
+                <img src="./work1.png" alt="">
+                <div class="overlay">
+                    <small>ecommerce website design</small>
+                </div>
+            </div>
+            <div class="work-item">
+                <img src="./work1.png" alt="">
+                <div class="overlay">
+                    <small>ecommerce website design</small>
+                </div>
+            </div>
+            <div class="work-item">
+                <img src="./work1.png" alt="">
+                <div class="overlay">
+                    <small>ecommerce website design</small>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <footer class="container" id="connect3">
         <h2>Connect</h2>
